# gha-badge

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: clippy.yml  lint.yml  rustfmt.yml  test.yml
src/: main.rs
tests/: cli.rs
